fix: reference error

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <button class="password" id="first-password" onclick="copyText('first-password')"></button>
       <button class="password" id="second-password" onclick="copyText('second-password')"></button>
     </div>
-    <script type="module" src="/main.js"></script>
-    <script src="src/script/script.js"></script>
+    <script type="module" src="/src/scripts/main.js"></script>
+    <script type="text/javascript" src ="/src/scripts/script.js"></script>
   </body>
 </html>
