--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Password Generator</title>
   </head>
   <body class="dark">
-    <button id="color-mode" onclick="setMode()">
+    <button id="color-mode">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
         <path stroke-linecap="round" stroke-linejoin="round" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z" />
       </svg>
@@ -16,7 +16,7 @@
     <div id="app">
       <h1>Generate a <br><span>random password</span></h1>
       <p>Never use an insecure password again.</p>
-      <button id="generate-button" onclick="generatePasswords()">Generate passwords</button>
+      <button id="generate-button">Generate passwords</button>
       <section>
         <input type="checkbox" id="use-special" value="yes" checked>
         <label for="use-special">Use special symbols</label>
@@ -26,10 +26,9 @@
         <label for="password-length">Set the password length (8-15)</label>
       </section>
       <hr>
-      <button class="password" id="first-password" onclick="copyText('first-password')"></button>
-      <button class="password" id="second-password" onclick="copyText('second-password')"></button>
+      <button class="password" id="first-password"></button>
+      <button class="password" id="second-password"></button>
     </div>
     <script type="module" src="/src/scripts/main.js"></script>
-    <script type="text/javascript" src ="/src/scripts/script.js"></script>
   </body>
 </html>
